# pyots

./: .flake8  .gitignore  LICENSE  README.md  build.py  build_ots.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql.yml  release.yml  run_tests.yml
src/_pyots/: bindings.cpp  pyots-context.h
src/pyots/: __init__.py
tests/: test_compare_ots_python.py  test_ots_suite.py
